objects/AcctSeed__Integrity_Report_Entry__c.object
<CustomObject>
    <description>Used to document integrity report results.</description>
    <fields>
        <fullName>AcctSeed__Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Source_Record_Id__c</fullName>
        <label>Source Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Source_Record_Name__c</fullName>
        <label>Source Record Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Source_Record_Type__c</fullName>
        <label>Source Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Payable Line</fullName>
                </value>
                <value>
                    <fullName>Billing Cash Receipt</fullName>
                </value>
                <value>
                    <fullName>Billing Line</fullName>
                </value>
                <value>
                    <fullName>Cash Disbursement</fullName>
                </value>
                <value>
                    <fullName>Cash Receipt</fullName>
                </value>
                <value>
                    <fullName>Journal Entry Line</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Source_Record__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; AcctSeed__Source_Record_Id__c, AcctSeed__Source_Record_Name__c)</formula>
        <label>Source Record</label>
        <type>Text</type>
    </fields>
    <label>Integrity Report Entry</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AcctSeed__Source_Record_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IRE-{00000}</displayFormat>
        <label>Integrity Report Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrity Report Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>